--- a/educational-platform-frontend/src/components/ui/Header.module.css
+++ b/educational-platform-frontend/src/components/ui/Header.module.css
@@ -1,3 +1,9 @@
+.header-container {
+  width: 100%;
+  background-color: var(--color-gray-800);
+  margin-bottom: 30px;
+}
+
 .header {
   padding: 20px;
   display: flex;
