--- a/educational-platform-frontend/src/index.css
+++ b/educational-platform-frontend/src/index.css
@@ -52,5 +52,56 @@ ul {
 a {
   text-decoration: none;
   color: var(--color-primary-900);
-  cursor: default;
+  cursor: pointer;
+}
+
+label, input {
+  display: block;
+}
+
+.input-container {
+  margin-bottom: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  color: var(--color-primary-900);
+  max-width: 90%;
+  width: 350px;
+}
+
+.input-container span {
+  flex-basis: 100%;
+  color: coral;
+  font-size: 14px;
+}
+
+.input-container label {
+  margin-right: 15px;
+  margin-bottom: 5px;
+  width: 50px;
+}
+
+.input-container input {
+  margin-bottom: 5px;
+  height: 36px;
+  font-size: 16px;
+  flex: 1;
+  color: var(--color-primary-300);
+  box-shadow: 0px 0px 2px 2px var(--color-gray-700);
+  border: none;
+}
+
+.input-container input:focus {
+  outline: none;
+  background-color: var(--color-gray-700);
+}
+
+h1,h2,h3,h4 {
+  margin: 0;
+}
+
+@media screen and (min-width: 1024px) {
+  .input-container span {
+    padding-left: 65px;
+  }
 }
