--- a/educational-platform-frontend/src/components/ui/Nav.module.css
+++ b/educational-platform-frontend/src/components/ui/Nav.module.css
@@ -21,15 +21,20 @@ nav {
   gap: 0;
 }
 
-.nav-list a {
+.nav-list a,
+.logoutBtn {
   cursor: pointer;
   padding: 10px;
   width: 100%;
   display: inline-block;
+  color: var(--color-primary-900);
+  background-color: var(--color-grey-800);
+  border: none;
+  font-size: 1.2rem;
 }
 
 .nav-list a:hover,
-a.active {
+.logoutBtn:hover {
   color: var(--color-primary-400);
 }
 
