--- a/educational-platform-frontend/src/index.css
+++ b/educational-platform-frontend/src/index.css
@@ -43,6 +43,18 @@ body {
   margin: 0;
 }
 
+#root {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
 ul {
   list-style: none;
   margin: 0;
@@ -55,10 +67,14 @@ a {
   cursor: pointer;
 }
 
-label, input {
+label,
+input {
   display: block;
 }
 
-h1,h2,h3,h4 {
+h1,
+h2,
+h3,
+h4 {
   margin: 0;
 }
