--- a/educational-platform-frontend/src/components/ui/Input.module.css
+++ b/educational-platform-frontend/src/components/ui/Input.module.css
@@ -26,14 +26,38 @@
   min-height: 36px;
   max-height: 36px;
   max-width: 90%;
-  color: var(--color-primary-300);
-  box-shadow: 0px 0px 2px 2px var(--color-gray-700);
   border: none;
+}
+
+.input-container input[type="file"] {
+  box-shadow: none;
+  min-height: 25px;
+  max-height: 25px;
 }
 
 .input-container input:focus {
   outline: none;
   background-color: var(--color-gray-700);
+}
+.select {
+  width: 200px;
+  min-height: 25px;
+  border: none;
+}
+
+.text-area {
+  width: 100%;
+  min-height: 100px;
+  max-height: 200px;
+  overflow-y: auto;
+  border: none;
+}
+
+.input-container input,
+.select,
+.text-area {
+  color: var(--color-primary-300);
+  box-shadow: 0px 0px 2px 2px var(--color-gray-700);
 }
 
 @media screen and (min-width: 1024px) {
@@ -47,11 +71,17 @@
     padding-left: 115px;
   }
 
-  .input-container input {
+  .input-container input,
+  .input-container select {
     flex: 1;
   }
 
   .input-container label {
     width: 100px;
+    margin-bottom: 0;
+  }
+
+  .text-area__span {
+    padding-left: 0 !important;
   }
 }
