--- a/educational-platform-frontend/src/components/ui/Nav.module.css
+++ b/educational-platform-frontend/src/components/ui/Nav.module.css
@@ -21,7 +21,8 @@ nav {
   gap: 0;
 }
 
-.nav-list a {
+.nav-list a,
+.logoutBtn {
   cursor: pointer;
   padding: 10px;
   width: 100%;
@@ -32,7 +33,8 @@ nav {
   font-size: 1.2rem;
 }
 
-.nav-list a:hover {
+.nav-list a:hover,
+.logoutBtn {
   color: var(--color-primary-400);
 }
 
