--- a/educational-platform-frontend/src/components/didactic/CreateDidacticMaterialForm.module.css
+++ b/educational-platform-frontend/src/components/didactic/CreateDidacticMaterialForm.module.css
@@ -20,6 +20,11 @@
   text-align: left;
 }
 
+.error {
+  margin: 10px auto;
+  color: red;
+}
+
 @media screen and (min-width: 1024px) {
   .create-didactic-material__form {
     padding-top: 30px;
