--- a/educational-platform-frontend/src/components/didactic/didacticMaterials/MaterialModal.module.css
+++ b/educational-platform-frontend/src/components/didactic/didacticMaterials/MaterialModal.module.css
@@ -11,6 +11,15 @@
   border-radius: 5px;
 }
 
+.modalErrorLoading {
+  background-color: var(--color-gray-700);
+  color: var(--color-primary-800);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+}
+
 iframe {
   width: 100%;
   height: calc(90vh - 2rem);
