--- a/educational-platform-frontend/src/components/didactic/didacticMaterials/Materials.module.css
+++ b/educational-platform-frontend/src/components/didactic/didacticMaterials/Materials.module.css
@@ -6,6 +6,13 @@
   gap: 15px;
 }
 
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+}
+
 @media screen and (min-width: 1024px) {
   .materials {
     padding: 20px;
