--- a/educational-platform-frontend/src/components/didactic/didacticMaterials/Filters.module.css
+++ b/educational-platform-frontend/src/components/didactic/didacticMaterials/Filters.module.css
@@ -8,7 +8,7 @@ h2 {
   font-size: 36px;
 }
 
-form {
+.form {
   margin: 0 auto;
   margin-top: 25px;
   margin-bottom: 25px;
@@ -55,7 +55,7 @@ select {
     margin-top: 30px;
   }
 
-  form {
+  .form {
     flex: 1;
     gap: 20px;
     max-width: unset;
