--- a/educational-platform-frontend/src/components/didactic/didacticMaterial/Material.module.css
+++ b/educational-platform-frontend/src/components/didactic/didacticMaterial/Material.module.css
@@ -29,7 +29,7 @@
 .thumbnail {
   flex-basis: 60%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .thumbnail img {
@@ -80,8 +80,8 @@
   color: var(--color-primary-800);
 }
 
-.ratings span {
-  display: block;
+.rating {
+  padding: 10px;
 }
 
 section h2 {
@@ -98,13 +98,17 @@ section h2 {
   margin: 0;
 }
 
+.date span,
+.author span {
+  margin-left: 5px;
+}
+
 .opinion {
   border-bottom: 1px solid white;
   margin-bottom: 15px;
 }
 
 .opinion:last-child {
-  border: none;
   margin-bottom: 0;
 }
 
@@ -130,6 +134,18 @@ section h2 {
   color: greenyellow;
 }
 
+.rate {
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-items: flex-end;
+  color: var(--color-primary-800);
+}
+
+.rate label {
+  width: unset;
+}
+
 @media screen and (min-width: 768px) {
   .header {
     flex-basis: 35%;
@@ -153,9 +169,16 @@ section h2 {
     flex-direction: row;
     justify-content: space-evenly;
     margin-top: 15px;
+    flex-wrap: wrap;
   }
 
   .description {
     flex-basis: 60%;
+  }
+
+  .rate {
+    flex-basis: 100%;
+    flex-direction: row;
+    justify-content: center;
   }
 }
