--- a/educational-platform-frontend/src/components/ui/Container.css
+++ b/educational-platform-frontend/src/components/ui/Container.css
@@ -4,7 +4,14 @@
   margin: 0 auto;
   margin-bottom: 30px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100%;
+}
+
+@media screen and (min-width: 1024px) {
+  .container {
+    flex-direction: row;
+  }
 }
