--- a/educational-platform-frontend/src/components/didactic/didacticMaterials/Filters.module.css
+++ b/educational-platform-frontend/src/components/didactic/didacticMaterials/Filters.module.css
@@ -26,11 +26,12 @@ h2 {
   padding: 10px;
   max-width: 300px;
   display: flex;
-}
-
-.filterSelect {
   gap: 25px;
   flex-basis: 100%;
+}
+
+.filterSelect select {
+  max-width: 150px;
 }
 
 @media screen and (min-width: 640px) {
@@ -55,6 +56,10 @@ h2 {
   .filterSelect {
     align-items: center;
     padding: 0;
+  }
+
+  .filterSelect select {
+    max-width: unset;
   }
 
   select {
