--- a/educational-platform-frontend/src/components/ui/Form.module.css
+++ b/educational-platform-frontend/src/components/ui/Form.module.css
@@ -30,6 +30,10 @@
   overflow: auto;
 }
 
+.mt-80 {
+  margin-top: 80px;
+}
+
 @media screen and (min-width: 1024px) {
   .form {
     min-height: 400px;
@@ -38,10 +42,8 @@
   .actions-right {
     justify-content: flex-end;
   }
-}
 
-@media screen and (max-height: 750px) {
   .mt-80 {
-    margin-top: 80px;
+    margin-top: unset;
   }
 }
