--- a/educational-platform-frontend/src/index.css
+++ b/educational-platform-frontend/src/index.css
@@ -77,7 +77,13 @@ h4 {
   margin: 0;
 }
 
-
+.file-name {
+  color: var(--color-primary-300);
+  margin: 5px 0;
+  box-shadow: 0px 0px 2px 2px var(--color-gray-700);
+  padding: 5px;
+  background-color: var(--color-gray-700);
+}
 
 @media screen and (min-width: 1023px) {
   #root {
