--- a/educational-platform-frontend/src/components/didactic/common/Contents.module.css
+++ b/educational-platform-frontend/src/components/didactic/common/Contents.module.css
@@ -1,4 +1,4 @@
-.materials {
+.contents {
   position: relative;
   display: flex;
   justify-content: center;
@@ -19,7 +19,7 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .materials {
+  .contents {
     padding: 20px;
   }
 }
